[project]
authors = [{name = "Tyler Shoemaker", email = "69219954+t-shoemaker@users.noreply.github.com"}]
description = "Train linear probes on neural language models"
name = "lm_probe"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "pytorch"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
lm_probe = { path = ".", editable = true }
nnsight = ">=0.3.7,<0.4"

[tool.pixi.dependencies]
pytorch = ">=2.5.0,<3"
torchvision = ">=0.20.1,<0.21"
transformers = ">=4.46.3,<5"
sentencepiece = ">=0.2.0,<0.3"
scikit-learn = ">=1.5.2,<2"
ipykernel = "*"

[[tool.mypy.overrides]]
module = "lm_probe.*"
disable_error_code = ["name-defined", "import-untyped"]
